# FerwehSimpleSynth

./: .gitignore  CMakeLists.txt
includes/: ParameterListener.h  PluginEditor.h  PluginParameters.h  PluginProcessor.h  SimpleSynthSound.h  SimpleSynthesiser.h
includes/components/: ChoicePad.h  Constants.h  GainFader.h  Pad.h  SelectionPads.h
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  SimpleSynthSound.cpp  SimpleSynthSound.h  SimpleSynthVoice.cpp  SimpleSynthVoice.h  SimpleSynthesiser.cpp  SimpleSynthesiser.h  WaveFunctions.cpp  WaveFunctions.h
src/gui/: CMakeLists.txt  ChoicePad.cpp  GainFader.cpp  Pad.cpp  SelectionPads.cpp
src/state/: CMakeLists.txt  ParameterListener.cpp  PluginParameters.cpp
src/synth/: CMakeLists.txt  SimpleSynthSound.cpp  SimpleSynthesiser.cpp  WaveFunctions.cpp
